crates/keron-lang/tests/corpus/errors/parse/for_three_idents.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found ',' expected something else, '#', or ')'
  --> 2:10
  |
2 | for (a, b, c) in m { reconcile c }
  |          ^
